# OpenCCL

./: CMakeLists.txt  LICENSE  README.txt
Lib/: CCLayoutWin.lib  OpenCCL.lib  libmetisWinVC6.lib  metisWinVC2013 - 복사본.lib  metisWinVC2013.lib  metisWinVC2013D.lib
VC_files/: OpenCCL.dsp  OpenCCL.dsw  OpenCCL.opt  OpenCCL.plg  OpenCCL.sln  UpgradeLog.htm
VC_files/Demo1/: Demo1.dsp  Demo1.plg  Demo1.vcxproj  Demo1.vcxproj.filters
VC_files/Demo1/Debug/: vc120.idb
VC_files/Demo1/Debug/Demo1.tlog/: CL.read.1.tlog  CL.write.1.tlog  Demo1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VC_files/Demo1/Release/Demo1.tlog/: CL.read.1.tlog  CL.write.1.tlog  Demo1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VC_files/OpenCCL/: OpenCCL.dsp  OpenCCL.plg  OpenCCL.vcxproj  OpenCCL.vcxproj.filters
VC_files/OpenCCL/Debug/: vc120.idb
VC_files/OpenCCL/Debug/OpenCCL.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
VC_files/OpenCCL/Release/OpenCCL.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+2 more)
example/: CMakeLists.txt  Demo.cpp  Demo2.cpp  Makefile
libsrc/: CMakeLists.txt  LayoutGraph.cpp  LayoutMetrics.cpp  Makefile
metis/: CMakeLists.txt  graphchk  kmetis  mesh2dual  mesh2nodal  oemetis  onmetis  partdmesh  partnmesh  pmetis
metis-4.0/: Makefile.in
metis-4.0/.svn/: entries
metis-4.0/Doc/.svn/: entries
metis-4.0/Graphs/.svn/: entries
metis-4.0/Lib/: balance.c  coarsen.c  defs.h  frename.c  graph.c  initpart.c  kvmetis.c  kwayrefine.c  kwayvolfm.c  kwayvolrefine.c  macros.h  match.c  mbalance2.c  memory.c  meshpart.c  metis.h  metis.opt  metis.plg  metis.vcxproj  metis.vcxproj.filters  mfm2.c  minitpart.c  minitpart2.c  mkwayrefine.c  mmatch.c  mmd.c  mpmetis.c  mrefine.c  parmetis.c  pmetis.c  pqueue.c  proto.h  rename.h  separator.c  struct.h  subdomains.c  util.c
metis-4.0/Lib/.svn/: entries
metis-4.0/Lib/Debug/: vc120.idb
metis-4.0/Lib/Release/: BuildLog.htm  ici80.dg  metis.lib  metis_icc.lib
metis-4.0/Programs/: graphchk.c  io.c  kmetis.c  onmetis.c  smbfactor.c
metis-4.0/Programs/.svn/: entries
metis-4.0/Test/.svn/: entries
metis/GKlib/: GKlib.h
metis/Graphs/: mtest
metis/Lib/: CMakeLists.txt  proto.h
(+168 files in other folders)
